--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "npm-run-all": "^4.1.5"
   }
 }
