--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -37,8 +39,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "postcss": "^8.4.33"
   }
 }
