--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,7 @@
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
-  },
-  "devDependencies": {
+    "vite": "^5.0.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
@@ -40,5 +38,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33"
-  }
+  },
+  "devDependencies": {}
 }
