--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
-  },
-  "devDependencies": {
+    "vite": "^5.1.4",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5"
-  }
+  },
+  "devDependencies": {}
 }
