--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "backend": "node backend/index.js",
     "frontend": "npm run dev --prefix frontend",
     "dev": "npm-run-all --parallel frontend backend",
-    "build": "echo 'No build steps required'",
+    "build": "npm install",
     "start": "npm run dev"
   },
   "keywords": [],
