--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "prebuild": "npm install --prefix frontend",
     "backend": "node backend/index.js",
     "frontend": "npm run dev --prefix frontend",
     "dev": "npm-run-all --parallel frontend backend",
