--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "npm install --prefix frontend",
     "backend": "node backend/index.js",
-    "frontend": "vite",
+    "frontend": "npm run dev --prefix frontend",
     "dev": "npm-run-all --parallel frontend backend",
     "build": "npm install",
     "start": "npm run dev"
